--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <button class="bg-slate-300 border-2 rounded-lg w-[50px]">Sort</button>
         </nav>
     </header>
-
+     <nav id="categories" class="py-3 flex gap-5 justify-center"></nav>
+   <script src="js/video.js"></script>
 </body>
 
 </html>
